--- a/public/mainWindow.html
+++ b/public/mainWindow.html
@@ -17,7 +17,7 @@
     <div class="mainApp">
         <div id="topBar" class="topBar">
             <div class="titleBar">
-                <button id="showHideMenus" class="toggleButton"><i id="toggleButton" class="fa-solid fa-bars fa-xl"></i></button>
+                <button id="showHideMenus" class="toggleButton"><i id="toggleButton" class="fa-solid fa-bars fa-2x"></i></button>
                 <img id="logo" src="../assets/icons/png/icon.png">
                 <div id="title" class="title">
                     Pomodoro Timer
