--- a/public/mainWindow.html
+++ b/public/mainWindow.html
@@ -18,7 +18,7 @@
         <div id="topBar" class="topBar">
             <div class="titleBar">
                 <button id="showHideMenus" class="toggleButton"><i id="toggleButton" class="fa-solid fa-bars fa-2x"></i></button>
-                <img id="logo" src="../assets/icons/png/icon.png">
+                <img id="logo" src="assets/icons/png/icon.png">
                 <div id="title" class="title">
                     Pomodoro Timer
                 </div>
