--- a/public/welcome.html
+++ b/public/welcome.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' "/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,33 +10,30 @@
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <script src="js/jquery-3.6.3.js"></script>
-    <script defer src="js/main.js"></script>
+    <script defer src="js/welcome.js"></script>
 </head>
 <body>
 <div class="mainApp">
     <div id="topBar" class="topBar">
         <div class="titleBar">
-            <img id="logo" src="../assets/icons/png/icon.png">
+            <img id="logo" src="assets/icons/png/icon.png">
             <div id="title" class="title">
                 Pomodoro Timer
             </div>
         </div>
     </div>
     <div class="contentArea">
-        <div id="contentPages" class="contentPages">
+        <div id="contentPages" class="contentPages" style="padding-top: 70px;">
             <hr>
             <h3>Welcome to Pomodoro Timer</h3>
             <p>Track your habits, study more efficiently</p>
             <br>
             <div id="buttons">
                 <button id="signUpButton" class="buttons">Sign Up</button>
-                <button class="buttons">Login</button>
+                <button id="loginButton" class="buttons">Login</button>
             </div>
-
             <br>
             <hr>
-
         </div>
     </div>
 </div>
