Modified the readme, and updated location of a few buttons.

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -27,7 +27,7 @@
             <h3>Welcome to Pomodoro Timer</h3>
             <p>Track your habits, study more efficiently</p>
             <br>
-            <div id="buttons">
+            <div id="buttonArea">
                 <button id="signUpButton" class="buttons">Sign Up</button>
                 <button id="loginButton" class="buttons">Login</button>
 
